--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Flask==2.2.0
-pandas==2.0.0
-scikit-learn==1.3.0
-matplotlib==3.7.1
+Flask==3.0.3
+Werkzeug==3.0.3
+pandas==2.2.2
+scikit-learn==1.5.1
+matplotlib==3.9.1
